<resources>
    <string name="app_name">Socket chat</string>
    <string name="startserver">Start server</string>
    <string name="joinserver">Join server</string>
    <string name="port">Port</string>
    <string name="ipaddress">IP Address</string>
    <string name="connected">Connected</string>
    <string name="notconnected">Not connected</string>
    <string name="entermessage">Enter message</string>
    <string name="send">Send</string>
    <string name="connecttoserver">Connect to server</string>
    <string name="close">Close app</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="confirmleave">Closing app?</string>
    <string name="inserttext">Insert text…</string>
    <string name="confirm">Confirm</string>
    <string name="create">Create</string>
    <string name="connect">Connect</string>
    <string name="info">Socket info</string>
    <string name="client">Client</string>
    <string name="server">Server</string>
    <string name="connectsuccessfully">Connected successfully!</string>
    <string name="invalidaddress">Invalid IP Address.</string>
    <string name="invalidportnumber">Invalid port number.</string>
    <string name="connectionerror">Couldn\'t connect to the server.</string>
    <string name="closesocket">Closing socket?</string>
    <string name="register_page">Register page</string>
    <string name="login_page">Login page</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registersuccess">Registered with success!</string>
    <string name="wrongcredentials">Wrong credentials.</string>
    <string name="loginsuccess">Logged successfully!</string>
    <string name="usernamelength">Your username needs to be atleast {length} characters long.</string>
    <string name="invaliddetails">You entered invalid details.</string>
    <string name="passwordlength">Your password needs to be atleast {length} characters long.</string>
    <string name="emailexists">This email is already registered.</string>
    <string name="usernameexists">This username is already registered.</string>
    <string name="back">Go back</string>
    <string name="serverslist">Servers list</string>
    <string name="joinviaip">Join via IP</string>
    <string name="server_disconnected">Disconnected from the server.</string>
    <string name="servername">Server name</string>
    <string name="serverpw">Server password (Optional)</string>
    <string name="invalidservername">Please enter a valid server name</string>
    <string name="invalidiporpw">Invalid IP Address or password</string>
</resources>