<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:layout_margin = "16dp"
    tools:context = ".MainActivity">

    <EditText
        android:id="@+id/etIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ipaddress"
        android:inputType="text" />

    <EditText
        android:id="@+id/etPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etIP"
        android:hint="@string/port"
        android:inputType="number" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPort"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/connecttoserver" />
    <TextView
        android:id = "@+id/server_out_message"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_above = "@+id/server_in_message"
        android:layout_below = "@+id/btnConnect"
        android:inputType = "textMultiLine"
        android:textAppearance = "@style/Base.TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/server_in_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/server_btn_send"
        android:hint="@string/entermessage"
        android:inputType="text" />

    <Button
        android:id="@+id/server_btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/send" />
</RelativeLayout>